日常更新界面

--- a/src/style/root.scss
+++ b/src/style/root.scss
@@ -1,4 +1,31 @@
 :root {
-  --header-height: 64px;
-  --header-border: #cecece
+  --header-height: 55px;
+  --header-border: #cecece;
+  --bg-color: #fff;
+  --nav-z-index: 25;
+}
+
+@media screen and (min-width: 1680px) {
+  :root {
+    --screen-max-width: 1482px;
+    --sidebar-width-small: 290px
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  :root {
+    --screen-max-width: 1362px;
+    --sidebar-width-small: 234px !important;
+  }
+}
+
+@media screen and (min-width: 960px) {
+  :root {
+    --sidebar-width-small: 266px
+  }
+}
+
+@media screen and (min-width: 768px) {
+  :root {
+  }
 }
