--- a/src/style.css
+++ b/src/style.css
@@ -2,3 +2,22 @@ html, body, #app {
   font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
 }
 
+*, :before, :after {
+  box-sizing: border-box;
+}
+
+/* 滚动条轨道样式 */
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+/* 滚动条滑块样式 */
+::-webkit-scrollbar-thumb {
+  background-color: #0003;
+  border-radius: 10px;
+  transition: all .2s ease-in-out;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+}
