--- a/src/style/root.scss
+++ b/src/style/root.scss
@@ -3,6 +3,11 @@
   --header-border: #cecece;
   --bg-color: #fff;
   --nav-z-index: 25;
+  --sidebar-width-small: 266px;
+}
+
+:root {
+  --sidebar-width-sm: 16em
 }
 
 @media screen and (min-width: 1680px) {
@@ -15,17 +20,18 @@
 @media screen and (min-width: 1440px) {
   :root {
     --screen-max-width: 1362px;
-    --sidebar-width-small: 234px !important;
+    --sidebar-width-small: 234px
   }
 }
 
 @media screen and (min-width: 960px) {
   :root {
-    --sidebar-width-small: 266px
+    --screen-max-width: 1362px;
   }
 }
 
 @media screen and (min-width: 768px) {
   :root {
+    --screen-max-width: 1362px;
   }
 }
