--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,16 @@ html, body, #app {
   font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
 }
 
+body {
+  margin: 0;
+  width: 100%;
+  min-width: 320px;
+  min-height: 100vh;
+  line-height: 1.4;
+  font-size: 16px;
+  font-weight: 400;
+}
+
 *, :before, :after {
   box-sizing: border-box;
 }
