--- a/src/style/root.scss
+++ b/src/style/root.scss
@@ -4,16 +4,22 @@
   --bg-color: #fff;
   --nav-z-index: 25;
   --sidebar-width-small: 266px;
+  --section-width: 800px
 }
 
 :root {
   --sidebar-width-sm: 16em
 }
 
-@media screen and (min-width: 1680px) {
+@media screen and (min-width: 768px) {
   :root {
-    --screen-max-width: 1482px;
-    --sidebar-width-small: 290px
+    --screen-max-width: 1362px;
+  }
+}
+
+@media screen and (min-width: 960px) {
+  :root {
+    --screen-max-width: 1362px;
   }
 }
 
@@ -24,14 +30,13 @@
   }
 }
 
-@media screen and (min-width: 960px) {
+@media screen and (min-width: 1680px) {
   :root {
-    --screen-max-width: 1362px;
+    --screen-max-width: 1482px;
+    --sidebar-width-small: 290px
   }
 }
 
-@media screen and (min-width: 768px) {
-  :root {
-    --screen-max-width: 1362px;
-  }
-}
+
+
+
