更新aside组件动画

--- a/src/style/root.scss
+++ b/src/style/root.scss
@@ -4,7 +4,8 @@
   --bg-color: #fff;
   --nav-z-index: 25;
   --sidebar-width-small: 266px;
-  --section-width: 800px
+  --section-width: 800px;
+  --z-index-sidebar: 25;
 }
 
 :root {
