--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,7 @@ body {
   line-height: 1.4;
   font-size: 16px;
   font-weight: 400;
+  background-color: var(--bg-color);
 }
 
 *, :before, :after {
